--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,119 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding:   0;
+  margin: 0;
+  font-family: sans-serif;
+  background: #d1cbc0;
 }
 
-body{
-    background: #d1cbc0;
-    height: 100vh;
+div * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.tablero{
-    width: 510px;
-    height: 510px;
-    margin: 0 auto;
-    box-sizing: content-box;
+h1 {
+  font-size: 29px;
+  text-align: center;
+  margin: 0;
 }
 
-.tablero .filas{
-    display: flex;
+.turnblack {
+  background: black!important;
+  color: #fff;
 }
 
-.tablero .filas .columna{
-    background-color: white;
-    width: 64px;
-    height: 64px;
-    text-align: center;
-    user-select: none;
-    font-size: 55px;
-    color: #000;
+.turnwhite{
+  background: #fff!important;
+  color: #000;
 }
 
-.tablero .filas .columna span{
-    cursor: pointer;
+#turn {
+  max-width: 451px;
+  max-height: 30px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  float: right;
+  border-radius: 5px;
+  border: 1px solid rgb(0, 0, 0);
+  border-style: inset;
+  text-align: center;
+  padding: 5px 0 0 0;
+  background: #fff;
+  transition: .85s linear;
 }
 
-.tablero .filas .black{
-    background-color: #e4b17d;
+.turnhighlight {
+  background: #5cb85c !important;
+  color: #fff;
 }
+
+
 .boton{
-    margin: 10px auto;
-    border: 0;
-    display: block;
-    padding: 15px;
-    width: 270px;
-    text-align:center;
-    clear:both;
-    color: white;
-    border-radius: 40px;
-    background-color: #000;
+  font-size: 14px;
+  margin: 5px auto;
+  border: 0;
+  display: block;
+  padding: 10px;
+  width: 150px;
+  text-align:center;
+  clear:both;
+  color: white;
+  border-radius: 40px;
+  background-color: #000;
+  cursor: pointer;
 }
 .boton:hover {
     background-color: #280933;
+}
+
+#game {
+  max-width: 510px;
+  max-height: 510px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  margin: 2px auto;
+}
+
+.cellprefix {
+  width: 100%;
+  height: 100%;
+  max-width: 50px;
+  max-height: 50px;
+  float: left;
+  margin: 3px;
+  padding: 15px 0 0 20px;
+
+}
+
+.gamecell {
+  background: #fff;
+  border: 1px solid #000;
+  width: 100%;
+  height: 100%;
+  max-width: 50px;
+  max-height: 50px;
+  float: left;
+  margin: 3px;
+  transition: all 0.5s ease-in-out;
+  font-size: 30pt;
+  padding: 0 0 0 3px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.gamecell:hover {
+  background: rgba(37, 88, 228, 0.712);
+}
+
+.grey {
+  background: #e4b17d;
+}
+
+.green {
+  background: rgb(65, 161, 73) !important;
 }
